<resources>
    <string name="app_name" translatable="false">Kuliner Lombok</string>

    <string name="menu_home">Home</string>
    <string name="menu_pasta_and_pizza">Pasta and Pizza</string>
    <string name="menu_speciality_food">Speciality Food</string>
    <string name="menu_traditional_food">Traditional Food</string>
    <string name="menu_my_favorite">My Favorite</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_about_us">About Us</string>

    <string name="menu_store_item_share">Bagikan</string>
    <string name="menu_store_item_vote">Vote</string>
    <string name="menu_store_item_checkin">Checkin</string>

    <string name="rating_item_service">Pelayanan</string>
    <string name="rating_item_taste">Citarasa</string>
    <string name="rating_item_cleanness">Kebersihan</string>
    <string name="rating_item_comfort">Kenyamanan</string>

    <string name="operation_time">Jam Buka</string>
    <string name="rating_price_range">Rentang Harga</string>
    <string name="rating_favorite_menu">Menu Favorit</string>

    <string name="add_comment_title">Beri Komentar</string>
    <string name="add_comment_positive_button">Kirim</string>
    <string name="add_comment_negative_button">Batal</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. \n\nUt enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. \n\nExcepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
